# clox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_clox.sh  demo.lox  error_manager.cpp  error_manager.hpp  lox  lox.cpp  lox.hpp  main.cpp  parser.hpp  run_demo.sh  run_test.sh  scanner.cpp  scanner.hpp  test  test.cpp  token.hpp
ast/: expr.hpp  expr_expected.hpp  interpreter_visitor.hpp  printer_visitor.hpp
clox/: CMakeLists.txt  callable.hpp  environment.cpp  environment.hpp  error_manager.cpp  error_manager.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.hpp
clox/ast/: expr.hpp  interpreter_visitor.cpp  interpreter_visitor.hpp  printer_visitor.hpp  return.hpp  stmt.hpp
clox/ast_interpreter/: ast_interpreter.cpp  ast_interpreter.hpp  callable.hpp  class.hpp  environment.cpp  environment.hpp  helper.hpp  native_function.hpp  printer_visitor.hpp  return.hpp
clox/ast_interpreter/callable/: callable.hpp  class.hpp  list.hpp  native_function.hpp
clox/common/: constants.hpp  error_manager.cpp  error_manager.hpp  expr_val.hpp  token.hpp
clox/error_manager/: error_manager.cpp  error_manager.hpp
clox/middleware/: identifier_resolver.cpp  identifier_resolver.hpp  resolver.cpp  resolver.hpp
clox/native_function/: clock.hpp
clox/parser/: expr.hpp  parser.cpp  parser.hpp  stmt.hpp
clox/scanner/: scanner.cpp  scanner.hpp  token.hpp
clox/utils/: CMakeLists.txt  helper.cpp  helper.hpp
demo/: binary_search.lox  class.lox  class_inherit.lox  condition.lox  example1.lox  example3.lox  example4.lox  example5 copy.lox  example5.lox  expression_and_statement.lox  function.lox  functional_programming.lox  list.lox  list_object.lox  loop.lox  loop_break_continue.lox  lox_builtin_function.lox  parse_error_report.lox  resolver.lox  test.lox  test6.lox  variable_scope.lox
docs/: design_doc.md
tests/: CMakeLists.txt  a.cpp  test_helper.cpp  test_interpreter_expr.cpp  test_interpreter_visitor.cpp  test_printer_visitor.cpp  test_scanner.cpp  test_token.cpp
utils/: ast_generator.cpp  helper.cpp  helper.hpp  magic_enum.hpp
